--- a/Index.html
+++ b/Index.html
@@ -51,6 +51,30 @@
             bottom: 0;
             width: 100%;
         }
+
+        .projects {
+            margin-top: 40px;
+            text-align: left;
+        }
+
+        .project-item {
+            margin-bottom: 20px;
+        }
+
+        .project-title {
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
+
+        .project-link {
+            color: #333;
+            text-decoration: none;
+            margin-left: 10px;
+        }
+
+        .project-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -60,6 +84,19 @@
     <main>
         <p>Explore my collection of projects and discover the world of coding!</p>
         <a href="#projects" class="btn">View Projects</a>
+        <section class="projects" id="projects">
+            <div class="project-item">
+                <h2 class="project-title">Project 1</h2>
+                <p>Description of Project 1</p>
+                <a href="project1.html" class="project-link">View Project</a>
+            </div>
+            <div class="project-item">
+                <h2 class="project-title">Project 2</h2>
+                <p>Description of Project 2</p>
+                <a href="project2.html" class="project-link">View Project</a>
+            </div>
+            <!-- Add more project items as needed -->
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Ankit. All Rights Reserved.</p>
